[gd_scene load_steps=13 format=3 uid="uid://6skro06fw5tq"]

[ext_resource type="Script" path="res://world.gd" id="1_m1t37"]
[ext_resource type="PackedScene" uid="uid://dk6uyot5kcx6r" path="res://map.tscn" id="2_ar3ij"]
[ext_resource type="PackedScene" uid="uid://m5lbjp4omncu" path="res://enemy.tscn" id="2_eodqu"]
[ext_resource type="PackedScene" uid="uid://c8xhbtv8vi4qd" path="res://hitscangun.tscn" id="4_tb60s"]
[ext_resource type="PackedScene" uid="uid://stqfmdjlg4nj" path="res://pweapon.tscn" id="5_cv8j3"]
[ext_resource type="PackedScene" uid="uid://befk6n2lyli5t" path="res://assault_rife.tscn" id="6_b2r82"]
[ext_resource type="PackedScene" uid="uid://c62tlmx8k8wy" path="res://sniper.tscn" id="7_vqunu"]
[ext_resource type="PackedScene" uid="uid://djys3qhoa60dh" path="res://burst_rife.tscn" id="8_x4xvw"]
[ext_resource type="PackedScene" uid="uid://dr3wxonw2fviu" path="res://projectile_weapon.tscn" id="9_q6t7r"]
[ext_resource type="PackedScene" uid="uid://ua6xbfhlnb7y" path="res://grenade_launcher.tscn" id="10_wmu8k"]
[ext_resource type="PackedScene" uid="uid://druvtthu3lkxd" path="res://respawn_area.tscn" id="11_rt3mx"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3j0fk"]
properties/0/path = NodePath(".:players")
properties/0/spawn = false
properties/0/sync = true
properties/1/path = NodePath(".:scoreboard")
properties/1/spawn = false
properties/1/sync = true

[node name="World" type="Node"]
script = ExtResource("1_m1t37")

[node name="Node3D" parent="." instance=ExtResource("2_ar3ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.09181, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -229.0
offset_right = 278.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainMenu"]
layout_mode = 2
color = Color(0.619608, 0.670588, 0.745098, 1)

[node name="MC" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="CanvasLayer/MainMenu/MC"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MC/Options"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="HostB" type="Button" parent="CanvasLayer/MainMenu/MC/Options"]
layout_mode = 2
text = "Host"

[node name="JoinB" type="Button" parent="CanvasLayer/MainMenu/MC/Options"]
layout_mode = 2
text = "Join"

[node name="address_input" type="LineEdit" parent="CanvasLayer/MainMenu/MC/Options"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/MC/Options"]
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player_body.tscn")
spawn_path = NodePath("..")

[node name="pweapon" parent="." instance=ExtResource("5_cv8j3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.28974, -1.56262, 6.92308)

[node name="Gun(Hitscan)" parent="." instance=ExtResource("4_tb60s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4239, -2.45627, -5.08317)

[node name="enemy" parent="." instance=ExtResource("2_eodqu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 9)

[node name="Assault_rife" parent="." instance=ExtResource("6_b2r82")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9539, -2.35863, 2.19244)

[node name="sniper" parent="." instance=ExtResource("7_vqunu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.88447, -2.24171, 3.65708)

[node name="Burst_rife" parent="." instance=ExtResource("8_x4xvw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15289, 0.0583272, -4.32376)

[node name="Projectile_weapon" parent="." instance=ExtResource("9_q6t7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.97406, -2.32083, -4.37046)

[node name="grenade_launcher" parent="." instance=ExtResource("10_wmu8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.0561, -2.41711, 4.89914)

[node name="Respawn_Area" parent="." instance=ExtResource("11_rt3mx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.725, 34.739, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3j0fk")

[connection signal="pressed" from="CanvasLayer/MainMenu/MC/Options/HostB" to="." method="_on_host_b_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MC/Options/JoinB" to="." method="_on_join_b_pressed"]
